--- a/config/database.yml
+++ b/config/database.yml
@@ -20,10 +20,14 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  database: <%= ENV['DATABASE_NAME'] %>
+  username: <%= ENV['DATABASE_USER'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  port: <%= ENV['DATABASE_PORT'] || '5432' %>
+  host: <%= ENV['DATABASE_HOST'] %>
 
 development:
   <<: *default
-  database: test_task_rails_books_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,7 +61,6 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: test_task_rails_books_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -81,6 +84,3 @@ test:
 #
 production:
   <<: *default
-  database: test_task_rails_books_production
-  username: test_task_rails_books
-  password: <%= ENV['TEST_TASK_RAILS_BOOKS_DATABASE_PASSWORD'] %>
